fixed spacing

--- a/assets2/style.css
+++ b/assets2/style.css
@@ -122,6 +122,7 @@ footer {
     text-align: left;
     position: relative;
 	color: var(--color-grey);
+	position: absolute;
 }
 
 #close-popup {
@@ -146,12 +147,13 @@ footer {
 .channel-blocks {
 	display: grid;
 	grid-template-columns: 1fr; 
-	grid-template-rows: repeat(1, 1fr); 
-	border-left: 2px solid black; 
+	grid-template-rows: repeat(auto-fill, minmax(1fr, 1fr)); 
+	height: 100vh;
   }
   
   .item {
 	border-bottom: 2px solid black; 
+	border-left: 2px solid black; 
 	height: auto; 
 	display: flex;
   }
@@ -166,10 +168,10 @@ footer {
     display: block;
 	margin: 1rem;
 }
-
+/* 
   .item:nth-child(50){
 	border-bottom: none;
-  }
+  } */
 
   h3 {
 	margin: 1rem;
@@ -182,12 +184,12 @@ footer {
 	
 /* pop up */
 #link-popup {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    /* background: rgba(0, 0, 0, 0.5); */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -195,6 +197,35 @@ footer {
     opacity: 0;
     transition: opacity 0.3s ease;
 }
+
+#popup-content {
+    position: absolute;
+    background: black;
+    padding: 1.5rem;
+    max-width: 400px;
+    width: auto;
+    max-height: 80vh;
+    color: white;
+    text-align: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+#close-link-popup {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+
 
 #link-popup.visible {
     visibility: visible;
